Core/objects/TrailheadEntityTrackedField__mdt/TrailheadEntityTrackedField__mdt.object-meta.xml
<CustomObject>
    <label>Trailhead Entity Tracked Field</label>
    <pluralLabel>Trailhead Entity Tracked Fields</pluralLabel>
</CustomObject>