Core/objects/TrailheadEntityTrackedField__mdt/fields/BadgeField__c.field-meta.xml
<CustomField>
    <fullName>BadgeField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Badge Field</label>
    <type>Checkbox</type>
</CustomField>