Core/objects/TrailheadEntityTrackedField__mdt/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>__c</fullName>
                <default>true</default>
                <label>__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>