Core/objects/TrailheadEntityTrackedField__mdt/fields/TrailField__c.field-meta.xml
<CustomField>
    <fullName>TrailField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trail Field</label>
    <type>Checkbox</type>
</CustomField>